--- a/components/Toolbar/Toolbar.module.css
+++ b/components/Toolbar/Toolbar.module.css
@@ -1,7 +1,7 @@
 .toolbar {
     position: absolute;
     height: 50%;
-    width: 5em;
+    width: 9em;
     align-items: center;
     justify-content: space-around;
     left: 5px;
@@ -9,7 +9,6 @@
     flex-direction: column;
     align-items: center;
     padding: 10px 0;
-
 }
 
 .toolbarButton {
@@ -33,4 +32,51 @@
 
 .toolbarIcon {
     font-size: 20px;
+}
+
+.boxSliderSrokeWidth {
+    display: flex;
+    width: 100%;
+    height: fit-content;
+    flex-direction: column;
+}
+
+.sliderSrokeWidth {
+    -webkit-appearance: none;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background: #d7dcdf;
+    outline: none;
+    padding: 0;
+    margin: 0;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.sliderSrokeWidth::-webkit-slider-thumb {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: #333;
+    cursor: pointer;
+}
+
+.boxSliderSrokeWidth::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    border: 0;
+    border-radius: 50%;
+    background: #333;
+    cursor: pointer;
+}
+
+.spanStrokeWidth {
+    background: #333;
+    text-align: center;
+    color: white;
+    width: 100%;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
