--- a/components/Toolbar/Toolbar.module.css
+++ b/components/Toolbar/Toolbar.module.css
@@ -59,7 +59,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #333;
+    background: black;
     cursor: pointer;
 }
 
@@ -68,15 +68,28 @@
     height: 20px;
     border: 0;
     border-radius: 50%;
-    background: #333;
+    background: black;
     cursor: pointer;
 }
 
 .spanStrokeWidth {
-    background: #333;
+    background: black;
     text-align: center;
     color: white;
     width: 100%;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+}
+
+@media (max-width: 600px) {
+    .toolbar {
+        position: static;
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px 0;
+    }
 }
