line tool & pen tool, better ui toolbar

--- a/components/Canvas/Canvas.module.css
+++ b/components/Canvas/Canvas.module.css
@@ -1,8 +1,10 @@
 .canvasContainer {}
 
 .canvas {
+    outline: none;
     background-color: #ffffff;
 }
+
 
 @media (max-width: 600px) {
     .canvas {
