--- a/components/Toolbar/Toolbar.module.css
+++ b/components/Toolbar/Toolbar.module.css
@@ -15,7 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 3em;
+    width: fit-content;
+    min-width: 3em;
     height: 3em;
     border-radius: 25px;
     background-color: black;
