--- a/components/Canvas/Canvas.module.css
+++ b/components/Canvas/Canvas.module.css
@@ -3,13 +3,14 @@
 .canvas {
     outline: none;
     background-color: #ffffff;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 }
 
 
 @media (max-width: 600px) {
     .canvas {
-        width: 100%;
-        height: 100%;
         max-height: calc(100% - 50px);
     }
 }
