--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,3 +6,20 @@
     text-align: center;
     vertical-align: middle;
 }
+
+.scrollContainer {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.scroll {
+    overflow: scroll;
+    width: 70%;
+    height: 100%;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+}
