--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,4 @@
 .container {
-    width: 100%;
-    height: 100%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -16,7 +14,7 @@
 }
 
 .scroll {
-    overflow: scroll;
+    overflow: hidden;
     width: 70%;
     height: 100%;
     margin: 0 auto;
