--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color: #10233d;
+  background-color: #111111;
   height: 100%;
   width: 100%;
   margin: 0;
